--- a/application/views/backend/backend.tmpl
+++ b/application/views/backend/backend.tmpl
@@ -1,10 +1,40 @@
-<html>
-  <body>
-    <h1>Backend area</h1>
-    <p>
-	{block name="content"}
-      {$content}
-	{/block}
-    </p>
-  </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Users - Admin Template</title>
+<link rel="stylesheet" type="text/css" href="{URL::base()}static/backend/css/theme.css" />
+<link rel="stylesheet" type="text/css" href="{URL::base()}static/backend/css/theme1.css" />
+<link rel="stylesheet" type="text/css" href="{URL::base()}static/backend/css/style.css" />
+<!--[if IE]>
+<link rel="stylesheet" type="text/css" href="{URL::base()}static/backend/css/ie-sucks.css" />
+<![endif]-->
+</head>
+
+<body>
+	<div id="container">
+    	<div id="header">
+        	<h2>Proweb v3.0 Backend area</h2>
+        	<div id="topmenu">
+                <ul>
+                    <li>&nbsp;</li>
+              </ul>
+          </div>
+      </div>
+        
+        <div id="wrapper">
+            <div id="content">
+                {block name="content"}
+                  {$content}
+                {/block}
+            </div>
+       </div>
+        <div id="footer">
+            <div id="credits">
+       		   Created by <a href="http://mrdoggy.info">MrDoggy</a>
+            </div>
+            <br />
+        </div>
+    </div>
+</body>
 </html>
