--- a/application/views/backend/backend.tmpl
+++ b/application/views/backend/backend.tmpl
@@ -16,15 +16,32 @@
         	<h2>Proweb v3.0 Backend area</h2>
         	<div id="topmenu">
                 <ul>
-                    <li>&nbsp;</li>
+                {if Auth::instance()->logged_in('backend')}
+                    {foreach from=$MainMenu item=Mn}
+                        <li{if $Mn->id == $MenuItem->id || $Mn->id == $MenuItem->parent_id} class="current"{/if}><a href="{URL::base()}backend/{$Mn->controller}/{$Mn->action}{if $Mn->params}?{$Mn->params}{/if}">{$Mn->title}</a></li>
+                    {/foreach}
+                {else}
+                    &nbsp;
+                {/if}
               </ul>
           </div>
       </div>
-        
+      {if count($SubMenu)}
+       <div id="top-panel">
+            <div id="panel">
+                <ul>
+                  {foreach from=$SubMenu item=Mn}
+                    <li><a href="{URL::base()}backend/{$Mn->controller}/{$Mn->action}{if $Mn->params}?{$Mn->params}{/if}"{if $Mn->id == $MenuItem->id} class="current-sub"{/if}>{$Mn->title}</a></li>
+                  {/foreach}
+                </ul>
+            </div>
+      </div>
+       {/if}
+       
         <div id="wrapper">
             <div id="content">
                 {block name="content"}
-                  {$content}
+                  
                 {/block}
             </div>
        </div>
