--- a/application/views/backend/backend.tmpl
+++ b/application/views/backend/backend.tmpl
@@ -3,8 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Users - Admin Template</title>
-<link rel="stylesheet" type="text/css" href="{URL::base()}static/backend/css/theme.css" />
-<link rel="stylesheet" type="text/css" href="{URL::base()}static/backend/css/style.css" />
+{foreach from=$styles item=file}
+<link rel="stylesheet" type="text/css" href="{URL::base()}static/backend/{$file}" />
+{/foreach}
+{foreach from=$scripts item=file}
+{/foreach}
+
 <!--[if IE]>
 <link rel="stylesheet" type="text/css" href="{URL::base()}static/backend/css/ie-sucks.css" />
 <![endif]-->
