--- a/application/views/backend/user/login.tmpl
+++ b/application/views/backend/user/login.tmpl
@@ -7,7 +7,7 @@
 	<form name="formLogin" method="post" class="form w400" action="{URL::site('backend/user/login')}">
 	    <fieldset id="personal">
 	        <legend>INPUT LOGIN INFO</legend>
-	           {if $errors}<div class="error">Incorrect username or password</div>{/if}
+	           {if $errors}<div class="error">{Kohana::message('backend', 'incorrect_login')}</div>{/if}
 	           <label for="username">username:</label>
 	           <input type="text" name="username" value="" id="username" /> <br />
                <label for="password">password:</label>
