--- a/application/views/backend/backend.tmpl
+++ b/application/views/backend/backend.tmpl
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="{URL::base()}static/backend/{$file}" />
 {/foreach}
 {foreach from=$scripts item=file}
+<script src="{URL::base()}static/{$file}" type="text/javascript" charset="utf-8"></script>
 {/foreach}
 
 <!--[if IE]>
