--- a/application/views/backend/user/list.tmpl
+++ b/application/views/backend/user/list.tmpl
@@ -3,6 +3,8 @@
 {block name="content"}
         <div id="box">
                 <h3>Users</h3>
-                {include file="ajax/list.tmpl"}
+                <div class="reloadPart">
+                    {include file="./ajax/list.tmpl"}
+                </div>
         </div>
 {/block}
