--- a/application/views/backend/user/list.tmpl
+++ b/application/views/backend/user/list.tmpl
@@ -2,7 +2,7 @@
 
 {block name="content"}
         <div id="box">
-                <h3>Users</h3>
+                <h3>{__('Users')}</h3>
                 <div class="reloadPart">
                     {include file="./ajax/list.tmpl"}
                 </div>
