--- a/assets/css/backend/style.css
+++ b/assets/css/backend/style.css
@@ -347,6 +347,10 @@ form{
     color: red;
     text-align:center; 
 }
+.ok {
+    color: green;
+    text-align:center;
+}
 .current-sub {
     font-weight: bold;
 }
