--- a/application/views/backend/user/add.tmpl
+++ b/application/views/backend/user/add.tmpl
@@ -4,7 +4,7 @@
 <div id="box">
     <h3>{__('Add user')}</h3>
 
-    {include file="info/general.tmpl"}
+    {include file="./info/general.tmpl"}
 
 </div>
 {/block}
