--- a/application/views/backend/user/info/general.tmpl
+++ b/application/views/backend/user/info/general.tmpl
@@ -14,7 +14,7 @@
         <input type="password" name="password" value="" id="password" />
         <br />
         <label for="password_confirm">{__('Confirm password')}:</label>
-        <input type="password" name="password_confirm" value="" id="password_confirm" />
+        <input type="password" name="_external[password_confirm]" value="" id="password_confirm" />
         <br />
 
         <div align="center">
