--- a/application/views/backend/user/info/general.tmpl
+++ b/application/views/backend/user/info/general.tmpl
@@ -1,6 +1,4 @@
-<form name="formLogin" method="post" class="form w400" action="{URL::site('backend/user/add')}">
-    <fieldset id="personal"> 
-        <legend>{__('General info')}</legend>
+<form name="formLogin" method="post" class="form w400" action="{URL::site('backend/user/edit')}">
     {if isset($errors['username'])}<div class="error">{$errors['username']}</div>{/if}
         <label for="username">{__('Username')}:</label>
         <input type="text" name="username" value="{$User->username}" id="username" />
@@ -22,5 +20,4 @@
             <input type="Submit" name="subm" value="{__('Save')}" />
             <br />
         </div>
-    </fieldset>
 </form>
