--- a/application/views/backend/user/edit.tmpl
+++ b/application/views/backend/user/edit.tmpl
@@ -3,26 +3,31 @@
 {block name='content'}
 <div id="box">
     <h3>{__('Edit user')}</h3>
+    {if isset($ok)}<div class="ok">{__('Operation completed successfully')}</div>{/if}
+
     <div id="tabs">
         <ul>
-            <li><a href="#tabs-1">{__('General info')}</a></li>
-            <li><a href="#tabs-2">{__('Groups')}</a></li>
-            <li><a href="#tabs-3">{__('Extended info')}</a></li>
+            <li><a href="#tabs-general">{__('General info')}</a></li>
+            <li><a href="#tabs-groups">{__('Groups')}</a></li>
+            <li><a href="#tabs-extended">{__('Extended info')}</a></li>
         </ul>
-    <div id="tabs-1">
+    <div id="tabs-general">
     {include file="./info/general.tmpl"}
     </div>
-    <div id="tabs-2">
+    <div id="tabs-groups">
     {include file="./info/groups.tmpl"}
     </div>
-    <div id="tabs-3">
+    <div id="tabs-extended">
     {include file="./info/extended.tmpl"}
     </div>
 </div>
 
     <script type="text/javascript">
         $(function() {
-            $( "#tabs" ).tabs();
+            $( "#tabs" ).tabs({ 
+                active: {$type|default:'0'},
+                activate: function( event, ui ) { $('.ok').remove(); }
+            });
         });
     </script>
 {/block}
