--- a/application/views/backend/user/info/extended.tmpl
+++ b/application/views/backend/user/info/extended.tmpl
@@ -1,4 +1,4 @@
-<form name="formLogin" method="post" class="form w400" action="{URL::site('backend/user/add')}">
+<form name="formLogin" method="post" class="form w400" action="{URL::site('backend/user/add')}/{$User->id}">
         {if isset($errors['firstname'])}<div class="error">{$errors['firstname']}</div>{/if}
         <label for="firstname">{__('First name')}:</label>
         <input type="text" name="firstname" value="{$User->member->firstname}" id="firstname" />
@@ -23,4 +23,5 @@
             <input type="Submit" name="subm" value="{__('Save')}" />
             <br />
         </div>
+    <input type="hidden" name="type" value="extended"/>
 </form>
