--- a/assets/css/backend/style.css
+++ b/assets/css/backend/style.css
@@ -373,6 +373,10 @@ form{
 .form-shift {
     margin-left:50px;
 }
+
+.gry {
+    color: #A0A0A0;
+}
 /*********************
 	Icons
 *********************/
