--- a/application/views/backend/user/edit.tmpl
+++ b/application/views/backend/user/edit.tmpl
@@ -10,6 +10,7 @@
             <li><a href="#tabs-general">{__('General info')}</a></li>
             <li><a href="#tabs-groups">{__('Groups')}</a></li>
             <li><a href="#tabs-extended">{__('Extended info')}</a></li>
+            <li><a href="#tabs-notes">{__('Admin Notes')}</a></li>
         </ul>
     <div id="tabs-general">
     {include file="./info/general.tmpl"}
@@ -19,6 +20,9 @@
     </div>
     <div id="tabs-extended">
     {include file="./info/extended.tmpl"}
+    </div>
+    <div id="tabs-notes">
+        {include file="./info/notes.tmpl"}
     </div>
 </div>
 
