--- a/application/views/backend/user/list.tmpl
+++ b/application/views/backend/user/list.tmpl
@@ -2,7 +2,9 @@
 
 {block name="content"}
         <div id="box">
-                <h3>{__('Users')}</h3>
+                <h3 class="reallynow"><span>{__('Users')}</span>
+                    <a href="{URL::base()}backend/user/add" class="add">{__('Add user')}</a>
+                    <div class="clb"></div></h3>
                 <div class="reloadPart">
                     {include file="./ajax/list.tmpl"}
                 </div>
