--- a/static/css/backend/style.css
+++ b/static/css/backend/style.css
@@ -246,23 +246,14 @@ thead{
 .margin-left{
 	margin-left:5px;
 }
-#rightnow .reallynow {
-	padding: 5px;
-	font-size:14px;
-}
-#rightnow h3{
-	padding:2px;
-	padding: 0 10px;
-	font-size:14px;
-}
-#rightnow .reallynow span {
+.reallynow span {
 	display: block;
 	text-align: left;
 	float: left;
 	padding:0 2px;
 	font-size:14px
 }
-#rightnow .reallynow a {
+.reallynow a {
 	text-decoration:none;
 	display: block;
 	text-align: right;
@@ -272,7 +263,7 @@ thead{
 	font-weight:normal;
 	font-size:12px;
 }
-#rightnow .reallynow a:hover{
+.reallynow a:hover{
 	text-decoration:underline;
 }
 #rightnow .youhave {
@@ -281,6 +272,9 @@ thead{
 }
 #rightnow a {
 	font-weight: bold;
+}
+.clb {
+    clear: both;
 }
 /*********************
 		Forms
@@ -376,6 +370,9 @@ form{
 
 .gry {
     color: #A0A0A0;
+}
+.reallynow {
+    
 }
 /*********************
 	Icons
