--- a/application/views/backend/user/ajax/list.tmpl
+++ b/application/views/backend/user/ajax/list.tmpl
@@ -38,5 +38,5 @@
     </table>
     {include file='../../paging.tmpl'}
 {else}
-    <b>{__('no users has been added')}</b>
+    <div class="not-found">{__('no users has been added')}</div>
 {/if}
