--- a/application/views/backend/user/edit.tmpl
+++ b/application/views/backend/user/edit.tmpl
@@ -11,6 +11,7 @@
             <li><a href="#tabs-groups">{__('Groups')}</a></li>
             <li><a href="#tabs-extended">{__('Extended info')}</a></li>
             <li><a href="#tabs-notes">{__('Admin Notes')}</a></li>
+            <li><a href="#tabs-avatar">{__('Avatar')}</a></li>
         </ul>
     <div id="tabs-general">
     {include file="./info/general.tmpl"}
@@ -23,6 +24,9 @@
     </div>
     <div id="tabs-notes">
         {include file="./info/notes.tmpl"}
+    </div>
+    <div id="tabs-avatar">
+        {include file="./info/avatar.tmpl"}
     </div>
 </div>
 
